# codescout

./: .env.amd  .env.cpu  .env.example  .env.gpu  .env.lite  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  docker-compose.gpu.yml  docker-compose.matrix.yml  docker-compose.yml
.buddy/memory/: INDEX.md
.cargo/: config.toml
.claude/skills/: claude-traces
.code-explorer/: system-prompt.md
.code-explorer/memories/: architecture.md  conventions.md  development-commands.md  domain-glossary.md  gotchas.md  mcp-user-output-channels.md  onboarding.md  project-overview.md
.codescout/: librarian.toml  system-prompt.md
.codescout/memories/: architecture.anchors.toml  architecture.md  cargo-test-lib-skips-integration.md  claude-code-mcp-env.anchors.toml  claude-code-mcp-env.md  conventions.anchors.toml  conventions.md  development-commands.anchors.toml  development-commands.md  domain-glossary.anchors.toml  domain-glossary.md  gotchas.anchors.toml  gotchas.md  l01-4e-smoke-2026-05-13.anchors.toml  onboarding.md  project-overview.anchors.toml  project-overview.md  system-prompt.anchors.toml  system-prompt.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
contrib/pi/: AGENTS.md  README.md  codescout-mode.ts  install.sh  mcp.json  mcp.json.example
crates/codescout-embed/: .gitignore  Cargo.toml
crates/codescout-embed/src/: chunker.rs  embedder.rs  lib.rs  local.rs  mock.rs  remote.rs
crates/librarian-mcp/: .gitignore  CREDITS.md  Cargo.toml
crates/librarian-mcp/.codescout/: usage.db
crates/librarian-mcp/.codescout/memories/: architecture.anchors.toml  architecture.md  conventions.anchors.toml  conventions.md  development-commands.md  domain-glossary.anchors.toml  domain-glossary.md  gotchas.anchors.toml  gotchas.md  project-overview.md  system-prompt.anchors.toml  system-prompt.md
crates/librarian-mcp/src/: classify.rs  current_project.rs  filter.rs  freshness.rs  frontmatter.rs  ids.rs  indexer.rs  lib.rs  main.rs  server.rs  util.rs  workspace.rs
crates/librarian-mcp/src/catalog/: artifact.rs  augmentation.rs  commits.rs  event_edges.rs  events.rs  find.rs  links.rs  migrate_v6.rs  mod.rs  observations.rs  schema.sql  sources.rs
crates/librarian-mcp/src/preview/: default.rs  headings.rs  memory.rs  mod.rs  plan.rs  spec.rs
crates/librarian-mcp/src/prompts/: companion_hint.md  server_instructions.md
crates/librarian-mcp/src/tools/: artifact.rs  artifact_event.rs  artifact_refresh.rs  augment.rs  context.rs  create.rs  event_create.rs  find.rs  gather.rs  get.rs  graph.rs  librarian.rs  link.rs  links.rs  list_by_kind.rs  mod.rs  mv.rs  observe.rs  refresh.rs  refresh_commit.rs  refresh_stale.rs  reindex.rs  schema_validate.rs  scope.rs  state_at.rs  timeline.rs  tracker_create.rs  tracker_design.rs  update.rs  update_params.rs  workspace_state_at.rs
crates/librarian-mcp/tests/: companion_hint.rs  goal_archetype.rs  goal_eval.rs  mcp_integration.rs  timemachine_smoke.rs
crates/librarian-mcp/tests/goal_eval/: rubric.rs
crates/librarian-mcp/tests/goal_eval/fixtures/goal_01_phase6_provider_lifts/: t0.json  t1.json  t2.json
crates/librarian-mcp/tests/goal_eval/fixtures/goal_02_retrieval_p5/: t0.json  t2.json
crates/librarian-mcp/tests/goal_eval/fixtures/goal_03_tools_mod_refactor/: t0.json  t1.json  t2.json
crates/librarian-mcp/tests/goal_eval/fixtures/goal_04_kotlin_lsp_mux/: t0.json  t1.json  t2.json
crates/librarian-mcp/tests/goal_eval/fixtures/goal_05_augmentation_postfix/: t0.json  t2.json
docker/sparse-amd/: Dockerfile
docs/: ARCHITECTURE.md  FEATURES.md  PROGRESSIVE_DISCOVERABILITY.md  QUICK-START.md  RELEASE-TODO.md  RELEASE.md  ROADMAP.md  SECURITY.md  TAXONOMY.md  TODO-lsp-cancelled-kotlin.md  TODO-phase6-provider-lifts.md  TODO-review-2026-03-05.md  TODO-tool-misbehaviors.md  embedding-setup.md  observations.md  research-validation.md  socraticode-borrow-tracker.md  state-protocol.md
docs/adrs/: 2026-05-11-remote-only-embedding.md  2026-05-13-semantic-anchors-qdrant-payload.md  2026-06-11-kotlin-lsp-upgrade-decoupled-from-sharing.md  2026-06-11-mux-single-owner-invariant.md  2026-06-13-drop-name-collision-defect.md
docs/agents/: claude-code.md  copilot.md  cursor.md
docs/architecture/: augmented-artifacts.md  companion-plugin.md  mcp-channel-caps.md
docs/archive/: 2026-03-05-TODO-review.md  2026-03-16-TODO-mcp-elicitation.md  2026-04-22-TODO-phase6-provider-lifts.md
docs/conventions/: retrofitting-trackers-for-filtering.md  test-env-isolation.md
docs/evals/: archive-tracker-rule.md  augmented-tracker-discovery.md  reconnaissance-output.md  reconnaissance-trigger.md  run-in-background-discoverability.md
docs/issues/: 2026-03-21-parallel-edit-file-partial-state.md  2026-04-16-mcp-cancel-disconnect.md  2026-04-18-memory-leak-x-session-freeze.md  2026-04-24-find-symbol-cold-start-hang.md  2026-04-24-find-symbol-kotlin-multi-session.md  (+126 more)
docs/research/: README.md  (+8 more)
examples/: activate_leak_probe.rs  embed_leak_probe.rs
scripts/: build-windows.sh  chunk-model-matrix.py  extract-kotlin-tcs.py  install-lsp.sh  retrieval-stack.sh  run-tc-benchmark.py  run-tc-benchmark.sh  sweep-bm25-boost.sh  sweep-bm25-cr1200.sh  tc-kotlin.json
src/: agent.rs  hardware.rs  heartbeat.rs  lib.rs  librarian.rs  logging.rs  main.rs  perf.rs  server.rs  socket_discovery.rs  sqlite_vec_ext.rs  workspace.rs
tests/: audit_doc_refs.rs  bug_regression.rs  call_graph_live.rs  cli_artifact.rs  cross_process_write_lock.rs  integration.rs  mcp-smoke-kotlin.sh  mcp-smoke-rust.sh  rename_symbol.rs  retrieval_e2e.rs  retrieval_integration.rs  retrieval_overlap.rs  retrieval_unit.rs  symbol_lsp.rs
tests/fixtures/nav-eval-rust/: .gitignore  Cargo.toml
tests/fixtures/nav-eval-rust/src/: call_graph_cycle.rs  call_graph_trait.rs  closure_vs_fn.rs  cold_path.rs  cross_module.rs  generics.rs  lib.rs  macro_expansion.rs  overload.rs  re_export.rs  shadowing.rs  tests_module.rs  trait_dispatch.rs
(+942 files in other folders)
