[package]
name = "codescout"
version = "0.2.0"
edition = "2021"
description = "High-performance coding agent toolkit MCP server"
repository = "https://github.com/mareurs/codescout"
license = "MIT"
rust-version = "1.75"

[lib]
name = "codescout"
path = "src/lib.rs"

[[bin]]
name = "codescout"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# MCP protocol (Rust SDK)
rmcp = { version = "0.1", features = ["server", "macros", "transport-io", "transport-sse-server"] }
schemars = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"
async-trait = "0.1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Git integration
git2 = "0.19"

# Database — SQLite with bundled libsqlite3
# sqlite-vec provides vec_distance_cosine for in-SQL similarity computation
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"

# File system traversal (respects .gitignore)
walkdir = "2"
ignore = "0.4"
globset = "0.4"

# Text / regex
regex = "1"

# Content hashing (incremental indexing)
sha2 = "0.10"
hex = "0.4"

# LSP protocol types
lsp-types = "0.97"

# URI handling (file:// ↔ path conversion, handles Windows drive letters + percent-encoding)
url = "2"

# AST parsing (tree-sitter)
tree-sitter = "0.25"

# HTTP client (remote embeddings — OpenAI-compatible APIs, Ollama, etc.)
reqwest = { version = "0.12", features = ["json"], optional = true }
# Local CPU embeddings via ONNX Runtime (fastembed model hub)
fastembed = { version = "4", optional = true }
tree-sitter-rust = "0.24.0"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-kotlin-ng = "1.1.0"
libc = "0.2.182"

# Temp files (buffer reference resolution in run_command)
tempfile = "3"

# Dashboard web server (behind "dashboard" feature)
axum = { version = "0.8", features = ["json"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
open = { version = "5", optional = true }

[features]
default = ["remote-embed", "dashboard"]
dashboard = ["dep:axum", "dep:tower-http", "dep:open"]
# Remote embedding via OpenAI-compatible HTTP API (Ollama, OpenAI, etc.)
remote-embed = ["dep:reqwest"]
# Local CPU embedding via fastembed-rs (ONNX Runtime + HuggingFace model hub).
# First use downloads the chosen model (~20-300MB) to ~/.cache/huggingface/hub/.
local-embed = ["dep:fastembed"]
# Local embedding via candle (HuggingFace Rust ML — adds significant compile time)
# candle-embed = ["dep:candle-core", "dep:candle-transformers", "dep:candle-nn", "dep:hf-hub", "dep:tokenizers"]

# E2E tests — require real LSP servers installed
e2e = ["e2e-rust", "e2e-python", "e2e-typescript", "e2e-kotlin", "e2e-java"]
e2e-rust = []       # needs: rust-analyzer
e2e-python = []     # needs: pyright-langserver
e2e-typescript = [] # needs: typescript-language-server
e2e-kotlin = []     # needs: kotlin-lsp
e2e-java = []       # needs: jdtls

[profile.release]
opt-level = 3
lto = "thin"
strip = true
# Abort on panic rather than unwind — prevents a future panic from leaving the
# MCP server in a half-alive state where the process runs but no responses are
# sent. With abort, any panic kills the process immediately and Claude Code
# triggers a clean reconnect via `/mcp`. (BUG-021 investigation, 2026-03-03)
panic = "abort"

[dev-dependencies]
tempfile = "3"
tower = "0.5"
filetime = "0.2"
