[package]
name = "codescout-embed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared embedding primitives for codescout + librarian-mcp"

[features]
# Remote embedding via OpenAI-compatible HTTP API (Ollama, OpenAI, etc.)
remote-embed = ["dep:reqwest"]
# Local CPU embedding via fastembed-rs (ONNX Runtime + HuggingFace model hub).
# First use downloads the chosen model (~20-300MB) to ~/.cache/huggingface/hub/.
local-embed = ["dep:fastembed"]

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# HTTP client (remote embeddings — OpenAI-compatible APIs, Ollama, etc.)
reqwest = { version = "0.13", default-features = false, features = ["json", "http2", "charset", "rustls-no-provider"], optional = true }
# Local CPU embeddings via ONNX Runtime (fastembed model hub)
fastembed = { version = "5", optional = true }
