[package]
name = "librarian-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "librarian-mcp"
path = "src/main.rs"

[dependencies]
codescout-embed = { path = "../codescout-embed", features = ["remote-embed", "local-embed"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = "0.0.12"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
rmcp = { version = "1.3", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
globset = "0.4"
walkdir = "2"
ignore = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
toml = "1"
dirs = "5"
pulldown-cmark = "0.13"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
