[package]
name = "librarian-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Workspace artifact registry: indexes markdown specs, plans, ADRs, runbooks, and memories with a typed link graph"

[dependencies]
codescout-embed = { path = "../codescout-embed", version = "0.1.0", features = ["remote-embed"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = "0.0.12"
tokio = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
rmcp = { version = "1.3", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
globset = "0.4"
walkdir = "2"
regex = "1"
ignore = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
toml = "1"
dirs = "5"
pulldown-cmark = "0.13"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
ulid = "1"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
minijinja = { version = "2", default-features = false, features = ["builtins", "serde"] }
jsonschema = { version = "0.30", default-features = false }

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
